Tue Dec 19 17:30:00 GMT 2000 peter@retep.org.uk
	- Finally created ant build.xml file

Mon Nov 20 08:12:00 GMT 2000 peter@retep.org.uk
	- Encoding patch to Connection by wrobell@posexperts.com.pl

Tue Oct 17 15:35:00 BST 2000 petermount@maidstone.gov.uk
	- Changed getTimestamp() again. This time Michael Stephenson's
	  <mstephenson@tirin.openworld.co.uk> solution looked far better
	  than the original solution put in June.
	
Tue Oct 10 13:12:00 BST 2000 peter@retep.org.uk
	- DatabaseMetaData.supportsAlterTableWithDropColumn() as psql doesn't
	  support dropping of individual columns
	- Merged in some last patches. Only 1 left, which may not be compatible
	  with jdbc1
	- Merged in my old retepsql project. Makefile now includes it.
	
Mon Oct 02 12:30:00 BST 2000 peter@retep.org.uk
	- Merged in byte[] array allocation changes submitted by Gunnar R|nning
	  <gunnar@candleweb.no>
	
Mon Sep 25 14:22:00 BST 2000 peter@retep.org.uk
	- Removed the DriverClass kludge. Now the org.postgresql.Driver class
	  is compiled from a template file, and now has both the connection
	  class (ie jdbc1/jdbc2) and the current version's from Makefile.global
	
Thu Jul 20 16:30:00 BST 2000 petermount@it.maidstone.gov.uk
	- Fixed DatabaseMetaData.getTableTypes()

Tue Jun 06 12:00:00 BST 2000 petermount@it.maidstone.gov.uk
	- Added org/postgresql/DriverClass.java to the list of files removed
	  by make clean (it's dynamically built)
	- Fixed Statement, so that the update count is valid when an SQL
	  DELETE operation is done.
	- While fixing the update count, made it easier to get the OID of
	  the last insert as well. Example is in example/basic.java

Tue Jun 06 08:37:00 BST 2000 petermount@it.maidstone.gov.uk
	- Removed a hardwired 8K limit on query strings
	- Added some missing org.'s in Connection that prevented
	  the use of the geometric types.

Thu Jun 01 07:26:00 BST 2000 petermount@it.maidstone.gov.uk
	- Removed timezone in getTimestamp() methods in ResultSet.
